--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,13 @@ Authors@R:
            email = "contact@bodkan.net",
            comment = c(ORCID = "0000-0003-4879-8421"))
 Description: An interface for various command-line tools provided by the
-    software package 'ADMIXTOOLS' (<https://github.com/DReichLab/AdmixTools>).
+    software suite 'ADMIXTOOLS' (<https://github.com/DReichLab/AdmixTools>).
     Wrapper functions completely automate the generation of intermediate
     configuration files, run 'ADMIXTOOLS' programs on the command-line in
-    the background, and extract statistics of interest. This allows users
-    to avoid worrying about low-level technical details of scripting in
-    the shell, and focus on the research problem at hand. A set of complementary
+    the background, and extract statistics of interest from the files which
+    they produce. This allows users to avoid worrying about low-level technical
+    details of shell scripting which is requried by traditional 'ADMIXTOOLS'
+    workflows, and focus on the research problem at hand. A set of complementary
     functions for processing and filtering of data in the 'EIGENSTRAT' format
     is also provided.
 License: MIT + file LICENSE
